<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:background="@color/app_screen"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/andma_logo_small"
            app:srcCompat="@drawable/andma_logo_sm" />

        <TextView
            android:id="@+id/typeShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="59dp"
            android:layout_marginRight="59dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/custom_btn"
                app:srcCompat="@drawable/btn_custom" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btn_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/theme_btn"
                app:srcCompat="@drawable/btn_theme" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/success_btn"
                app:srcCompat="@drawable/btn_success" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <ImageView
                android:id="@+id/btn_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/info_btn"
                app:srcCompat="@drawable/btn_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/default_btn"
                app:srcCompat="@drawable/btn_default" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_wrapper"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/warning_btn"
                app:srcCompat="@drawable/btn_warning" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btn_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/error_btn"
                app:srcCompat="@drawable/btn_error" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>